WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303624
[blocks-in-inline] Fix fast/lists/marker-before-empty-inline.html
https://bugs.webkit.org/show_bug.cgi?id=303624
Summary
[blocks-in-inline] Fix fast/lists/marker-before-empty-inline.html
alan
Reported
2025-12-05 06:09:44 PST
ssia
Attachments
Patch
(3.46 KB, patch)
2025-12-05 06:11 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(144.06 KB, patch)
2025-12-05 06:54 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-05 06:11:59 PST
Created
attachment 477627
[details]
Patch
alan
Comment 2
2025-12-05 06:54:22 PST
Created
attachment 477628
[details]
[fast-cq]Patch
Antti Koivisto
Comment 3
2025-12-05 06:56:33 PST
Comment on
attachment 477628
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=477628&action=review
> COMMIT_MESSAGE:18 > +* LayoutTests/fast/lists/marker-before-empty-inline-expected.html: Copied from LayoutTests/fast/lists/marker-before-empty-inline.html. > +* LayoutTests/fast/lists/marker-before-empty-inline.html: > +* LayoutTests/platform/glib/fast/lists/marker-before-empty-inline-expected.png: Removed. > +* LayoutTests/platform/glib/fast/lists/marker-before-empty-inline-expected.txt: Removed. > +* LayoutTests/platform/gtk/fast/lists/marker-before-empty-inline-expected.png: Removed. > +* LayoutTests/platform/ios/fast/lists/marker-before-empty-inline-expected.txt: Removed. > +* LayoutTests/platform/mac/fast/lists/marker-before-empty-inline-expected.png: Removed. > +* LayoutTests/platform/mac/fast/lists/marker-before-empty-inline-expected.txt: Removed. > +* LayoutTests/platform/win/fast/lists/marker-before-empty-inline-expected.txt: Removed. > +* LayoutTests/platform/wpe/fast/lists/marker-before-empty-inline-expected.png: Removed.
nice!
EWS
Comment 4
2025-12-05 09:56:12 PST
Committed
303995@main
(7bb0c8fbcde2): <
https://commits.webkit.org/303995@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477628
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-12-05 09:57:13 PST
<
rdar://problem/165924510
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug