[blocks-in-inline] Fix fast/lists/marker-before-empty-inline.html https://bugs.webkit.org/show_bug.cgi?id=303624

Reviewed by Antti Koivisto.

303960@main missed checking for all nested inlines.

* LayoutTests/TestExpectations:
* LayoutTests/fast/lists/marker-before-empty-inline-expected.html: Copied from LayoutTests/fast/lists/marker-before-empty-inline.html.
* LayoutTests/fast/lists/marker-before-empty-inline.html:
* LayoutTests/platform/glib/fast/lists/marker-before-empty-inline-expected.png: Removed.
* LayoutTests/platform/glib/fast/lists/marker-before-empty-inline-expected.txt: Removed.
* LayoutTests/platform/gtk/fast/lists/marker-before-empty-inline-expected.png: Removed.
* LayoutTests/platform/ios/fast/lists/marker-before-empty-inline-expected.txt: Removed.
* LayoutTests/platform/mac/fast/lists/marker-before-empty-inline-expected.png: Removed.
* LayoutTests/platform/mac/fast/lists/marker-before-empty-inline-expected.txt: Removed.
* LayoutTests/platform/win/fast/lists/marker-before-empty-inline-expected.txt: Removed.
* LayoutTests/platform/wpe/fast/lists/marker-before-empty-inline-expected.png: Removed.
* Source/WebCore/layout/formattingContexts/inline/InlineQuirks.cpp:
(WebCore::Layout::InlineQuirks::shouldCollapseLineBoxHeight const):

Canonical link: https://commits.webkit.org/303995@main